--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,7 @@ jobs:
 
   sample:
     runs-on: ubuntu-22.04
+    needs: maven-build
     steps:
       - name: download artifactory
         uses: actions/download-artifact@v3
