--- a/.github/actions/sonarqube/action.yaml
+++ b/.github/actions/sonarqube/action.yaml
@@ -6,6 +6,10 @@ runs:
   using: composite
 
   steps:
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
     - name: Cache SonarQube packages
       uses: actions/cache@v1
       with:
@@ -18,9 +22,3 @@ runs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    - name: Build and analyze
-      env:   
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_URL }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-      shell: bash 
