--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,7 +19,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Sonarqube scanner
         uses: ./.github/actions/sonarqube
-    
+
+      - name: Build and analyze
+        env:   
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        shell: bash 
+
   docker:
     runs-on: ubuntu-22.04
     needs: maven-build
@@ -33,7 +40,7 @@ jobs:
         run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         shell: bash
-        
+
       - name: docker-push-scan
         uses: ./.github/actions/docker
 
