--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,7 +27,7 @@ jobs:
 
   docker:
     runs-on: ubuntu-22.04
-    needs: maven-build
+    needs: Sonarqube
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
