--- a/.github/actions/owasp/action.yaml
+++ b/.github/actions/owasp/action.yaml
@@ -3,6 +3,10 @@ description: It is used to check the pom.xml package
 runs:
   using: composite
   steps:
+    - name: Download jarfile
+      uses: actions/download-artifact@v3
+      with:
+        name: jar-file
     - name: Dependencycheck
       uses: dependency-check/Dependency-Check_Action@main
       id: Depcheck
