--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,10 +15,8 @@ jobs:
     runs-on: ubuntu-22.04
     needs: maven-build
     steps:
-    - name: Download jarfile
-      uses: actions/download-artifact@v3
-      with:
-        name: jar-file
+    - name: Git Checkout
+      uses: actions/checkout@v3
     - name: dependency-check
       uses: ./.github/actions/owasp
 
