--- a/.github/actions/owasp/action.yaml
+++ b/.github/actions/owasp/action.yaml
@@ -3,10 +3,9 @@ description: It is used to check the pom.xml package
 runs:
   using: composite
   steps:
-    - name: Download jarfile
-      uses: actions/download-artifact@v3
-      with:
-        name: jar-file
+    - name: Build project with Maven
+      run: mvn clean install
+      shell: bash
     - name: Dependencycheck
       uses: dependency-check/Dependency-Check_Action@main
       id: Depcheck
