--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,45 +10,69 @@ jobs:
         uses: actions/checkout@v3
       - name: Maven jar package
         uses: ./.github/actions/maven-jar
-
-  maven-dep-check:
+  depchecktest:
     runs-on: ubuntu-22.04
-    needs: maven-build
+    name: depecheck_test
     steps:
-    - name: Git Checkout
-      uses: actions/checkout@v3
-    - name: dependency-check
-      uses: ./.github/actions/owasp
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build project with Maven
+        run: mvn clean install
+      - name: Depcheck
+        uses: dependency-check/Dependency-Check_Action@main
+        id: Depcheck
+        with:
+          project: 'test'
+          path: '.'
+          format: 'HTML'
+          out: 'reports' # this is the default, no need to specify unless you wish to override it
+          args: >
+            --failOnCVSS 7
+            --enableRetired
+      - name: Upload Test results
+        uses: actions/upload-artifact@master
+        with:
+            name: Depcheck report
+            path: ${{github.workspace}}/reports
 
-  Sonarqube:
-    runs-on: ubuntu-22.04
-    needs: maven-dep-check
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      - name: Sonarqube scanner
-        uses: ./.github/actions/sonarqube
-      - name: Build and analyze
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=javaspringboot
+  # maven-dep-check:
+  #   runs-on: ubuntu-22.04
+  #   needs: maven-build
+  #   steps:
+  #   - name: Git Checkout
+  #     uses: actions/checkout@v3
+  #   - name: dependency-check
+  #     uses: ./.github/actions/owasp
 
-  docker:
-    runs-on: ubuntu-22.04
-    needs: Sonarqube
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      - name: Docker login
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        shell: bash
-      - name: docker-push-scan
-        uses: ./.github/actions/docker
+  # Sonarqube:
+  #   runs-on: ubuntu-22.04
+  #   needs: maven-dep-check
+  #   steps:
+  #     - name: Git Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Sonarqube scanner
+  #       uses: ./.github/actions/sonarqube
+  #     - name: Build and analyze
+  #       env:
+  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  #       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=javaspringboot
+
+  # docker:
+  #   runs-on: ubuntu-22.04
+  #   needs: Sonarqube
+  #   steps:
+  #     - name: Git Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Docker login
+  #       env:
+  #         DOCKER_USER: ${{ secrets.DOCKER_USER }}
+  #         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  #       run: |
+  #         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+  #       shell: bash
+  #     - name: docker-push-scan
+  #       uses: ./.github/actions/docker
 
 
         
