--- a/.github/actions/docker/action.yaml
+++ b/.github/actions/docker/action.yaml
@@ -32,16 +32,13 @@ runs:
       with:
         image-ref: 'tharun13055/springboot-app:lastest'
         format: 'table'
-        exit-code: '1'
-        ignore-unfixed: true
-        vuln-type: 'os,library'
-        # severity: 'CRITICAL'
-        # ignore-severity: 'HIGH,UNKNOWN'
       id: trivy-scan
       env:
         TRIVY_OUTPUT_FILE: trivy_report.txt
+
     - name: Save Trivy Report
-      run: echo "${{ steps.trivy-scan.outputs.result }}" > $TRIVY_OUTPUT_FILE
+      run: |
+        echo "${{ steps.trivy-scan.outputs.result }}" > $TRIVY_OUTPUT_FILE
       shell: bash
     
     - name: docker image Push
