--- a/.github/actions/docker/action.yaml
+++ b/.github/actions/docker/action.yaml
@@ -32,6 +32,7 @@ runs:
       with:
         image-ref: 'tharun13055/springboot-app:lastest'
         format: 'table'
+        args: --ignore-unfixed
       id: trivy-scan
       env:
         TRIVY_OUTPUT_FILE: trivy_report.txt
