--- a/.github/actions/docker/action.yaml
+++ b/.github/actions/docker/action.yaml
@@ -35,7 +35,7 @@ runs:
         format: 'sarif'
         args: --ignore-unfixed
         output: 'trivy-image-results.sarif'
-        severity: ''
+        severity: 'LOW,MEDIUM'
     - name: Upload the results
       uses: github/codeql-action/upload-sarif@v2
       with:
