--- a/.github/actions/docker/action.yaml
+++ b/.github/actions/docker/action.yaml
@@ -27,22 +27,21 @@ runs:
         docker build -t tharun13055/springboot-app:${{ steps.increment_tag.outputs.tag }} .
       shell: bash
     
-    - name: Aqua Security Trivy
-      uses: aquasecurity/trivy-action@0.11.2
-      with:
-        image-ref: 'tharun13055/springboot-app:lastest'
-        security-checks: 'vuln,secret,config'
-        format: 'sarif'
-        args: '--ignore-unfixed'
-        output: 'trivy-image-results.sarif'
-        severity: ''
+    # - name: Aqua Security Trivy
+    #   uses: aquasecurity/trivy-action@0.11.2
+    #   with:
+    #     image-ref: 'tharun13055/springboot-app:lastest'
+    #     format: 'table'
+    #     exit-code: '1'
+    #     ignore-unfixed: true
+    #     vuln-type: 'os,library'
+    #     severity: 'CRITICAL,HIGH'
+    #   id: trivy-scan
+    #   env:
+    #     TRIVY_OUTPUT_FILE: trivy_report.txt
 
-    - name: Upload Trivy Results
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: 'trivy-image-results.sarif'
-        ref: ${{ github.ref }}
-        sha: ${{ github.sha }}
+    # - name: Save Trivy Report
+    #   run: echo "${{ steps.trivy-scan.outputs.result }}" > $TRIVY_OUTPUT_FILE
 
     
     - name: docker image Push
