--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,6 +58,22 @@ jobs:
         uses: actions/checkout@v3
       - name: nexus jar push
         uses: ./.github/actions/nexus
+      - name: Upload to Nexus or Artifactory
+        run: |
+          mvn deploy:deploy-file
+            -Dfile=target/springboot-app.jar
+            -DrepositoryId=nexus
+            -Durl=${{ secrets.NEXUS_URL }}
+            -DgeneratePom=false
+            -Dpackaging=jar
+            -DgroupId=com.abhishek 
+            -DartifactId=spring-boot-demo
+            -Dversion=1.0  
+            -DgeneratePom.description="this project is build in maven"  
+            -Drepository.url=${{ secrets.NEXUS_URL }}/repository/nexus/
+            -Drepository.username=${{ secrets.NEXUS_USERNAME }}
+            -Drepository.password=${{ secrets.NEXUS_PASSWORD }}
+        shell: bash
 
 
         
