--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,6 +58,10 @@ jobs:
         uses: actions/checkout@v3
       - name: nexus jar push
         uses: ./.github/actions/nexus
+      - name: list
+        run: tree
+        shell: bash
+
       - name: Upload to Nexus or Artifactory
         env:
           NEXUS_URL: ${{ secrets.NEXUS_URL }}
