--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 
         </plugins>
     </build>
+    <distributionManagement>
+      <repository>
+        <id>nexus</id>
+        <url>http://172.190.41.71:8081/repository/nexus/</url>
+      </repository>
+    </distributionManagement>
 
 
 </project>
