--- a/.github/actions/maven-jar/action.yaml
+++ b/.github/actions/maven-jar/action.yaml
@@ -24,6 +24,18 @@ runs:
     #     path: ~/.m2/repository
     #     key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
 
+    - name: maven test
+      run: mvn test
+      shell: bash
+
+    - name: maven verify
+      run: mvn verify -DskipUnitTests
+      shell: bash
+
+    - name: maven compile
+      run: mvn clean compile
+      shell: bash
+
     - name: maven package
       run: mvn clean package
       shell: bash
