--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,7 +64,7 @@ jobs:
           NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
         run: |
-            mvn deploy
+            mvn deploy:deploy-file
             -Dfile=target/springboot-app.jar
             -DrepositoryId=nexus
             -Durl=$NEXUS_URL
