--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,13 +3,13 @@ name: maven-springboot-project
 on: workflow_dispatch
 
 jobs:
-  maven-build:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      - name: Maven jar package
-        uses: ./.github/actions/maven-jar
+  # maven-build:
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #     - name: Git Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Maven jar package
+  #       uses: ./.github/actions/maven-jar
 
   # maven-dep-check:
   #   runs-on: ubuntu-22.04
@@ -87,10 +87,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
+    - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 11
     - name: Build with Maven
       run: mvn package --file pom.xml
     - name: Nexus Repo Publish
