--- a/.github/actions/maven-jar/action.yaml
+++ b/.github/actions/maven-jar/action.yaml
@@ -6,6 +6,14 @@ runs:
   using: composite
 
   steps:
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+          
     - name: install java-maven
       uses: actions/setup-java@v3
       with:
@@ -17,15 +25,6 @@ runs:
           sudo apt update
           sudo apt install maven -y
       shell: bash
-      
-    - name: Cache Maven Dependencies
-      id: maven-cache
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-maven
-
     - name: maven test
       run: mvn test
       shell: bash
