--- a/.github/actions/nexus/action.yaml
+++ b/.github/actions/nexus/action.yaml
@@ -5,13 +5,11 @@ description: it will push the jar file to nexus
 runs:
   using: composite
   steps:
-    - name: github checkout
-      uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Build with Maven
-      run: mvn package --file pom.xml
-      shell: bash
+  - uses: actions/checkout@v1
+  - name: Set up JDK 1.8
+    uses: actions/setup-java@v1
+    with:
+      java-version: 1.8
+  - name: Build with Maven
+    run: mvn package --file pom.xml
+    shell: bash
