--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -59,6 +59,8 @@ jobs:
     steps:
     - name: git Checkout
       uses: actions/checkout@v3
+    - name: git action add
+      uses: ./.github/actions/nexus
     - name: Nexus Repo Publish
       uses: sonatype-nexus-community/nexus-repo-github-action@master
       with:
