--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -66,13 +66,26 @@ jobs:
     steps:
     - name: git Checkout
       uses: actions/checkout@v3
-    - name: Cache local Maven repository
-      uses: actions/cache@v2
+    # - name: Cache local Maven repository
+    #   uses: actions/cache@v2
+    #   with:
+    #     path: ~/.m2/repository
+    #     key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+    #     restore-keys: |
+    #       ${{ runner.os }}-maven-
+
+    - name: Fetch Maven Version
+      id: fetch-version
+      uses: actions/github-script@v4
       with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+        script: |
+          const fs = require('fs');
+          const pomXml = fs.readFileSync('path/to/pom.xml', 'utf8');
+          const versionRegex = /<version>(.*?)<\/version>/;
+          const versionMatch = pomXml.match(versionRegex);
+          const version = versionMatch ? versionMatch[1] : '';
+          console.log(`::set-output name=version::${version}`);
+
     - name: git action add
       uses: ./.github/actions/nexus
     - name: Nexus Repo Publish
@@ -83,6 +96,6 @@ jobs:
         password: ${{ secrets.NEXUS_PASSWORD }}
         format: maven2
         repository: nexus
-        coordinates: groupId=com.abhishek artifactId=spring-boot-demo version=1.0
+        coordinates: groupId=com.abhishek artifactId=spring-boot-demo version=${{ steps.fetch-version.outputs.version }}
         assets: extension=jar
         filename: ./target/springboot-app.jar
