--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,18 +74,6 @@ jobs:
     #     restore-keys: |
     #       ${{ runner.os }}-maven-
 
-    - name: Fetch Maven Version
-      id: fetch-version
-      uses: actions/github-script@v4
-      with:
-        script: |
-          const fs = require('fs');
-          const pomXml = fs.readFileSync('path/to/pom.xml', 'utf8');
-          const versionRegex = /<version>(.*?)<\/version>/;
-          const versionMatch = pomXml.match(versionRegex);
-          const version = versionMatch ? versionMatch[1] : '';
-          console.log(`::set-output name=version::${version}`);
-
     - name: git action add
       uses: ./.github/actions/nexus
     - name: Nexus Repo Publish
@@ -96,6 +84,6 @@ jobs:
         password: ${{ secrets.NEXUS_PASSWORD }}
         format: maven2
         repository: nexus
-        coordinates: groupId=com.abhishek artifactId=spring-boot-demo version=${{ steps.fetch-version.outputs.version }}
+        coordinates: groupId=com.abhishek artifactId=spring-boot-demo version=1.1
         assets: extension=jar
         filename: ./target/springboot-app.jar
