--- a/.github/actions/docker/action.yaml
+++ b/.github/actions/docker/action.yaml
@@ -31,11 +31,12 @@ runs:
       uses: aquasecurity/trivy-action@0.11.2
       with:
         image-ref: 'tharun13055/springboot-app:lastest'
-        format: 'table'
+        format: 'json'
         exit-code: '0'
         ignore-unfixed: true
         vuln-type: 'os,library'
-        # severity: 'LOW'
+      run: |
+        trivy --output output.json
     #   id: trivy-scan
     #   env:
     #     TRIVY_OUTPUT_FILE: trivy_report.txt
