--- a/.github/actions/docker/action.yaml
+++ b/.github/actions/docker/action.yaml
@@ -35,8 +35,6 @@ runs:
         exit-code: '0'
         ignore-unfixed: true
         vuln-type: 'os,library'
-      run: |
-        trivy --output output.json
     #   id: trivy-scan
     #   env:
     #     TRIVY_OUTPUT_FILE: trivy_report.txt
@@ -46,9 +44,9 @@ runs:
     #   shell: bash
 
     
-    # - name: docker image Push
-    #   run: |
-    #     docker push tharun13055/springboot-app:latest
-    #     docker push tharun13055/springboot-app:${{ steps.increment_tag.outputs.tag }}
-    #   shell: bash
+    - name: docker image Push
+      run: |
+        docker push tharun13055/springboot-app:latest
+        docker push tharun13055/springboot-app:${{ steps.increment_tag.outputs.tag }}
+      shell: bash
 
