--- a/springboot-app-helm/templates/serviceaccount.yaml
+++ b/springboot-app-helm/templates/serviceaccount.yaml
@@ -1,11 +1,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: service-account
+  name: {{ .Values.serviceaccountname}}
   labels:
-    kubernetes.io/name: service-account
-  namespace: springboot
-spec:
-  name: spring-service-account
+    {{- toYaml .Values.labels | nindent 4}}
+  namespace: {{ .Values.namespace.name}}
   automountServiceAccountToken: false
   
