--- a/springboot-app-helm/templates/hpa.yaml
+++ b/springboot-app-helm/templates/hpa.yaml
@@ -3,7 +3,7 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: {{ .Values.hpaname}}
   labels:
-    {{-toYaml .Values.labels | nindent 4}}
+    {{- toYaml .Values.labels | nindent 4}}
   namespace: {{ .Values.namespace.name}}
 spec:
   scaleTargetRef:
@@ -12,10 +12,10 @@ spec:
     name: {{ .Values.deploymentname}}
   minReplicas: {{ .Values.hpaspec.minReplicas}}
   maxReplicas: {{ .Values.hpaspec.maxReplicas}}
-  metrics:
-    - type: {{ .Values.metrics.type}}
-      resources:
-        name: {{ .Values.metrics.name}}
-        target: 
-          type: {{ .Values.metrics.target.type}}
-          averageUtilization: {{ .Values.metrics.target.averageUtilization}}
+  # metrics:
+  #   - type: {{ .Values.metrics.type}}
+  #     resources:
+  #       name: {{ .Values.metrics.name}}
+  #       target: 
+  #         type: {{ .Values.metrics.target.type}}
+  #         averageUtilization: {{ .Values.metrics.target.averageUtilization}}
