--- a/springboot-app-helm/templates/service.yaml
+++ b/springboot-app-helm/templates/service.yaml
@@ -3,13 +3,13 @@ kind: Service
 metadata:
   name: {{ .Values.servicename}}
   labels:
-    {{-toYaml .Values.labels | nindent 4}}
+    {{- toYaml .Values.labels | nindent 4}}
   namespace: {{ .Values.namespace.name}}
 spec:
   selector:
-    {{-toYaml .Values.labels | nindent 4}}
+    {{- toYaml .Values.labels | nindent 4}}
   ports:
     - targetPort: {{ .Values.spec.containers.ports}}
-      Port: {{ .Values.servicespec.port}}
+      port: {{ .Values.servicespec.port}}
       protocol: {{ .Values.servicespec.protocol}} 
   type: {{ .Values.servicespec.type}}
