--- a/springboot-app-helm/values.yaml
+++ b/springboot-app-helm/values.yaml
@@ -26,7 +26,7 @@ resources:
 # service 
 servicename: springboot-service
 servicespec:
-  protocol: Tcp
+  protocol: TCP
   port: 80
   type: LoadBalancer
   
