--- a/springboot-app-helm/values.yaml
+++ b/springboot-app-helm/values.yaml
@@ -15,7 +15,7 @@ spec:
     imagePullPolicy: Always
     ports: 8080
 resources:
-  request:
+  requests:
     cpu: "256m"
     memory: "1Gi"
   limits:
@@ -38,6 +38,7 @@ rolebindingname: springboot-rolebindings
 # Role
 rolename: springboot-role
 rules:
+  apiGroups: ["*"]
   resources: ["Pod","Deployment","Service","Namespace"]
   verbs: ["create","get","update","delete","list"]
 
