--- a/springboot-app-helm/templates/service.yaml
+++ b/springboot-app-helm/templates/service.yaml
@@ -13,3 +13,4 @@ spec:
       port: {{ .Values.servicespec.port}}
       protocol: {{ .Values.servicespec.protocol}} 
   type: {{ .Values.servicespec.type}}
+  serviceAccountName: {{ .Values.serviceaccountname}}
