--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -3,12 +3,13 @@ on: workflow_dispatch
 jobs:
   terraform:
     runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     steps:
       - name: Github checkout
         uses: actions/checkout@v2
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
 
       - name: Azure Login
         uses: azure/login@v1
@@ -16,6 +17,15 @@ jobs:
           client-id: ${{ secrets.TF_CLIENT_ID }}
           tenant-id: ${{ secrets.TF_TENANT_ID }}
           subscription-id: ${{ secrets.TF_SUBSCRIPTION_ID }}
+      
+      - name: Azure command
+        run: |
+          az account show
+          az group list
+        shell: bash
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1
 
       - name: Terraform Init
         run: |
