--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -24,17 +24,17 @@ jobs:
           az group list
         shell: bash
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
+      # - name: Set up Terraform
+      #   uses: hashicorp/setup-terraform@v1
 
-      - name: Terraform Init
-        run: |
-          terraform init
+      # - name: Terraform Init
+      #   run: |
+      #     terraform init
 
-      - name: Terraform Plan
-        run: |
-          terraform plan -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "subscription_id={{secrets.TF_SUBSCRIPTION_ID}}" -var "client_secret={{secrets.TF_CLIENT_SECRET}}"
+      # - name: Terraform Plan
+      #   run: |
+      #     terraform plan -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "subscription_id={{secrets.TF_SUBSCRIPTION_ID}}" -var "client_secret={{secrets.TF_CLIENT_SECRET}}"
 
-      - name: Terraform Apply
-        run: |
-          terraform apply --auto-approve -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "subscription_id={{secrets.TF_SUBSCRIPTION_ID}}" -var "client_secret={{secrets.TF_CLIENT_SECRET}}"
+      # - name: Terraform Apply
+      #   run: |
+      #     terraform apply --auto-approve -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "subscription_id={{secrets.TF_SUBSCRIPTION_ID}}" -var "client_secret={{secrets.TF_CLIENT_SECRET}}"
