--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -30,13 +30,13 @@ jobs:
       - name: Terraform Init
         run: |
           terraform init
-        working-directory: ./terraform
+        working-directory: /terraform
 
 
       - name: Terraform Plan
         run: |
           terraform plan -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "subscription_id={{secrets.TF_SUBSCRIPTION_ID}}" -var "client_secret={{secrets.TF_CLIENT_SECRET}}"
-        working-directory: ./terraform
+        working-directory: /terraform
 
       # - name: Terraform Apply
       #   run: |
