--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -34,10 +34,10 @@ jobs:
         working-directory: ./terraform
 
 
-      # - name: Terraform Plan
-      #   run: |
-      #     terraform plan -var "subscription_id={{ secrets.TF_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "client_secret={{ secrets.TF_CLIENT_SECRET }}"
-      #   working-directory: ./terraform
+      - name: Terraform Plan
+        run: |
+          terraform plan -var "subscription_id=${{ secrets.TF_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "client_secret=${{ secrets.TF_CLIENT_SECRET }}"
+        working-directory: ./terraform
 
       # - name: Terraform Apply
       #   run: |
