--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -39,7 +39,7 @@ jobs:
           terraform plan -var "subscription_id=${{ secrets.TF_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "client_secret=${{ secrets.TF_CLIENT_SECRET }}"
         working-directory: ./terraform
 
-      # - name: Terraform Apply
-      #   run: |
-      #     terraform apply --auto-approve -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "subscription_id={{ secrets.TF_SUBSCRIPTION_ID }}" -var "client_secret={{ secrets.TF_CLIENT_SECRET }}"
-      #   working-directory: ./terraform
+      - name: Terraform Apply
+        run: |
+          terraform apply --auto-approve -var "subscription_id=${{ secrets.TF_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "client_secret=${{ secrets.TF_CLIENT_SECRET }}"
+        working-directory: ./terraform
