--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,20 +3,20 @@ name: maven-springboot-project
 on: workflow_dispatch
 
 jobs:
-  maven-build:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Maven jar package
-        uses: ./.github/actions/maven-jar
+  # maven-build:
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #     - name: Git Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Cache local Maven repository
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: ~/.m2/repository
+  #         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-maven-
+  #     - name: Maven jar package
+  #       uses: ./.github/actions/maven-jar
 
   # maven-dep-check:
   #   runs-on: ubuntu-22.04
@@ -41,24 +41,21 @@ jobs:
   #         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
   #       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=javaspringboot
 
-  docker:
-    runs-on: ubuntu-22.04
-    needs: maven-build
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      - name: Docker login
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        shell: bash
-      - name: docker-push-scan
-        uses: ./.github/actions/docker
-  
-
-
+  # docker:
+  #   runs-on: ubuntu-22.04
+  #   needs: maven-build
+  #   steps:
+  #     - name: Git Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Docker login
+  #       env:
+  #         DOCKER_USER: ${{ secrets.DOCKER_USER }}
+  #         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  #       run: |
+  #         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+  #       shell: bash
+  #     - name: docker-push-scan
+  #       uses: ./.github/actions/docker
         
   # nexus:
   #   runs-on: ubuntu-22.04
@@ -87,3 +84,32 @@ jobs:
   #       coordinates: groupId=com.abhishek artifactId=spring-boot-demo version=1.1
   #       assets: extension=jar
   #       filename: ./target/springboot-app.jar
+  
+  Kubernetes:
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    steps:
+      - name: Github checkout
+        uses: actions/checkout@v2
+      
+      - name: Helm tool installer
+        uses: Azure/setup-helm@v3
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      #     client-id: ${{ secrets.TF_CLIENT_ID }}
+      #     tenant-id: ${{ secrets.TF_TENANT_ID }}
+      #     subscription-id: ${{ secrets.TF_SUBSCRIPTION_ID }}
+      
+      # - name: Aks setup
+      #   uses: Azure/aks-set-context@v1
+      #   with:
+      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
+      #     cluster-name: ${{ env.CLUSTER_NAME }}
+      #     resource-group: ${{ env.RESOURSE_GROUP }}
+      
