--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,6 +91,9 @@ jobs:
       contents: read
       pages: write
       id-token: write
+    env:
+      CLUSTER_NAME: kubernetes
+      RESOURSE_GROUP: learn
     steps:
       - name: Github checkout
         uses: actions/checkout@v2
@@ -101,15 +104,21 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
+          client-id: ${{ secrets.TF_CLIENT_ID }}
+          tenant-id: ${{ secrets.TF_TENANT_ID }}
+          subscription-id: ${{ secrets.TF_SUBSCRIPTION_ID }}
+      
+      - name: Aks setup
+        uses: Azure/aks-set-context@v1
+        with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      #     client-id: ${{ secrets.TF_CLIENT_ID }}
-      #     tenant-id: ${{ secrets.TF_TENANT_ID }}
-      #     subscription-id: ${{ secrets.TF_SUBSCRIPTION_ID }}
+          cluster-name: ${{ env.CLUSTER_NAME }}
+          resource-group: ${{ env.RESOURSE_GROUP }}
       
-      # - name: Aks setup
-      #   uses: Azure/aks-set-context@v1
-      #   with:
-      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
-      #     cluster-name: ${{ env.CLUSTER_NAME }}
-      #     resource-group: ${{ env.RESOURSE_GROUP }}
-      
+      - name: to get the nodes
+        run: |
+          kubectl get node
+          kubectl get pods
+        shell: bash
+
+
